"Tweak" selection permanently enabled #128104

Closed
opened 2024-09-25 09:00:40 +02:00 by Jesse Yurkovich · 5 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-24 23:06, hash: e0352eb807b2
Worked: 4.3 prior to 23cd299ba7

Short description of error
Looks like "tweak" selection is somehow stuck. Default drag-select and "B" box select does not work.

Exact steps for others to reproduce the error

  • Load default scene (with or without factory-startup)
  • Try to drag-select -- notice that the cube ends up transforming
  • Try to "B" box select -- notice nothing happens
**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-24 23:06, hash: `e0352eb807b2` Worked: 4.3 prior to 23cd299ba7e039e25a2b2f7107728ed010846808 **Short description of error** Looks like "tweak" selection is somehow stuck. Default drag-select and "B" box select does not work. **Exact steps for others to reproduce the error** - Load default scene (with or without `factory-startup`) - Try to drag-select -- notice that the cube ends up transforming - Try to "B" box select -- notice nothing happens
Jesse Yurkovich added the
Severity
Normal
Type
Bug
Status
Needs Triage
labels 2024-09-25 09:00:40 +02:00

Can confirm on Linux

Can confirm on Linux
Member

Can confirm as well on linux

Can confirm as well on linux
YimingWu added
Module
Modeling
Severity
High
Status
Confirmed
and removed
Severity
Normal
Status
Needs Triage
labels 2024-09-25 09:02:54 +02:00
Member

Will bisect

Will bisect

Can confirm on Windows as well.

Can confirm on Windows as well.
Member

Apparently broken by 23cd299ba7 @LukasTonne

Apparently broken by 23cd299ba7e039e25a2b2f7107728ed010846808 @LukasTonne
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-25 10:59:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#128104
No description provided.