Fix #128104: Selection operator poll function broken

The poll function was accidentally changed to return false when no
object is selected or the active object is not one of the special types
checked by the function. Reverted to return true in those cases.

Pull Request: https://projects.blender.org/blender/blender/pulls/128110