source/blender/editors/space_view3d/view3d_select.cc
@@ -464,19 +464,18 @@ static bool view3d_selectable_data(bContext *C)
     return false;
   }
   if (ob == nullptr) {
-    return false;
+    if (ob->mode & OB_MODE_EDIT) {
+      return ob->type != OB_FONT;
+    }
+    if (ob->mode & (OB_MODE_VERTEX_PAINT | OB_MODE_TEXTURE_PAINT | OB_MODE_SCULPT_GPENCIL_LEGACY)) {
+      return BKE_paint_select_elem_test(ob);
+    }
+    if (ob->mode & OB_MODE_WEIGHT_PAINT) {
+      return BKE_paint_select_elem_test(ob) && BKE_object_pose_armature_get_with_wpaint_check(ob);
+    }
   }
 
-  if (ob->mode & OB_MODE_EDIT) {
-    return ob->type != OB_FONT;
-  }
-  if (ob->mode & (OB_MODE_VERTEX_PAINT | OB_MODE_TEXTURE_PAINT | OB_MODE_SCULPT_GPENCIL_LEGACY)) {
-    return BKE_paint_select_elem_test(ob);
-  }
-  if (ob->mode & OB_MODE_WEIGHT_PAINT) {
-    return BKE_paint_select_elem_test(ob) && BKE_object_pose_armature_get_with_wpaint_check(ob);
-  }
-  return false;
+  return true;
 }
 
 /* helper also for box_select */
